# Invoice-Processing-Automation

./: .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  web.py
data/custom_invoices/: invoice_2001.json  invoice_2002.txt  invoice_2003.json  invoice_2004.txt  invoice_2005.json
src/: __init__.py  config.py  database.py  pipeline.py  processing.py  theme.py
src/agents/: __init__.py  approval.py  explanation.py  extraction.py  fraud.py  payment.py  validation.py
src/llm/: __init__.py  grok_client.py
src/models/: __init__.py  audit.py  invoice.py  state.py
src/tools/: __init__.py  file_parser.py  inventory_db.py  payment_api.py  pdf_extractor.py
templates/: dashboard.html
tests/: conftest.py  test_approval.py  test_auto_decide.py  test_batch_dedup.py  test_extraction.py  test_fraud.py  test_grok_client.py  test_integration.py  test_pdf_extractor.py  test_pipeline.py  test_rejection_recording.py  test_theme.py  test_validation.py
